--- a/Views/Admin/AddRecipe.cshtml
+++ b/Views/Admin/AddRecipe.cshtml
@@ -122,7 +122,7 @@
 								<button type="button" class="btn btn-rounded btn-primary btn-add-ingre" id="btnAdd">
 									<span class="btn-icon-start text-primary">
 										<i class="fa fa-plus color-info"></i>
-									</span>Add
+									</span>Add new ingredient
 								</button>
 							</div>
 						</div>
@@ -136,7 +136,7 @@
 @section Script{
 	<script>
 		$(document).ready(function () {
-			//$('.select2').select2();
+			//$('.select2').
 			var count = 1;
 			$("#btnAdd").click(function () {
 				alert(count);
@@ -147,7 +147,7 @@
 				var selectName = "ingredient" + count;
 				var quantityName = "quantity" +count;
 				$('#selectIngredient').attr('name', selectName);
-				$('#quantity').attr('name', quantityName
+				$('#quantity').attr('name', quantityName);
 				count++;
 			});
 		});
