--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -750,8 +750,9 @@
     <script src="~/js/dashboard/dashboard-1.js" type="text/javascript"></script>
     <script src="~/js/custom.min.js" type="text/javascript"></script>
     <script src="~/js/deznav-init.js" type="text/javascript"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+   @* <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     @*  <link href="~/vendor/select2/css/select2.min.css"rel="stylesheet" />
     <script src="~/vendor/select2/js/select2.full.min.js"></script>*@
     @await RenderSectionAsync("Script", required: false)
