--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
-    <title>Take Of Recipe</title>
+    <title>Taste Of Recipe</title>
     <meta name='robots' content='max-image-preview:large' />
     <link rel="alternate" type="application/rss+xml"  href="~/feed/index.html" />
     <link rel="alternate" type="application/rss+xml"  Comments Feed" href="~/comments/feed/index.html" />
@@ -471,72 +471,72 @@
             padding-left: 0;
         }
 
-            .ul-user li {
-                width: 100%;
-                padding: 7px 0px 10px 18px;
-                font-family: var(--e-global-typography-520c191-font-family ), Sans-serif;
-                cursor: pointer;
-            }
+        .ul-user li {
+            width: 100%;
+            padding: 7px 0px 10px 18px;
+            font-family: var(--e-global-typography-520c191-font-family ), Sans-serif;
+            cursor: pointer;
+        }
 
-                .ul-user li:hover {
-                    background-color: #D54215;
-                    color: #fff;
-                }
+        .ul-user li:hover {
+            background-color: #D54215;
+            color: #fff;
+        }
 
-                .ul-user li:first-child:hover {
-                    background-color: #D54215;
-                    color: #fff;
-                    border-radius: 8px 8px 0 0;
-                }
+        .ul-user li:first-child:hover {
+            background-color: #D54215;
+            color: #fff;
+            border-radius: 8px 8px 0 0;
+        }
 
-                .ul-user li:last-child:hover {
-                    background-color: #D54215;
-                    color: #fff;
-                    border-radius: 0px 0px 8px 8px;
-                }
+        .ul-user li:last-child:hover {
+            background-color: #D54215;
+            color: #fff;
+            border-radius: 0px 0px 8px 8px;
+        }
 
         .ctn-user:hover .item-user {
             display: block
         }
 
         .elementor-widget:not(:last-child) {
-    margin-bottom: 0px;
-}
- .bg-item{
-     background-color: var(--e-global-color-text );
-    border-radius: 10px 10px 10px 10px;
-    margin-right: 20px;
-    height:auto
- }
- .img-item img{
-         width: 100%;
-    max-width: 100%;
-    height: 260px;
-    object-fit: cover;
-    object-position: center center;
-    border-radius: 5px 5px 5px 5px;
- }
- .elementor-post__text{
+         margin-bottom: 0px;
+        }
+        .bg-item{
+            background-color: var(--e-global-color-text );
+            border-radius: 10px 10px 10px 10px;
+            margin-right: 20px;
+            height:auto
+        }
+        .img-item img{
+            width: 100%;
+            max-width: 100%;
+            height: 260px;
+            object-fit: cover;
+            object-position: center center;
+            border-radius: 5px 5px 5px 5px;
+        }
+        .elementor-post__text{
             padding: 21px 21px 21px 21px;
       
- }
- .elementor-post__title a{
-         margin-bottom: 14px;
- }
- .elementor-post__meta-data{
-          margin-bottom: 14px;
-              color: var(--e-global-color-d7d34cf );
- }
- .elementor-post {
-    border-radius: 10px;
-    background-color: var(--e-global-color-text );
-}
+        }
+        .elementor-post__title a{
+            margin-bottom: 14px;
+        }
+        .elementor-post__meta-data{
+            margin-bottom: 14px;
+            color: var(--e-global-color-d7d34cf );
+        }
+        .elementor-post {
+            border-radius: 10px;
+            background-color: var(--e-global-color-text );
+        }
 
- .img-erros  {
-    height:200px;
-}
+        .img-erros  {
+            height:200px;
+        }
 
-.elementor-posts .elementor-post__meta-data {
+        .elementor-posts .elementor-post__meta-data {
             line-height: 1.3em;
             font-size: 14px;
             margin-bottom: 13px;
@@ -631,19 +631,21 @@ theli{
                                                         text-align: center
                                                     }
 
-                                                        .elementor-widget-image a {
-                                                            display: inline-block
-                                                        }
+                                                    .elementor-widget-image a {
+                                                        display: inline-block
+                                                    }
 
-                                                            .elementor-widget-image a img[src$=".svg"] {
-                                                                width: 48px
-                                                            }
+                                                    .elementor-widget-image a img[src$=".svg"] {
+                                                        width: 48px
+                                                    }
 
-                                                        .elementor-widget-image img {
-                                                            vertical-align: middle;
-                                                            display: inline-block
-                                                        }</style>													<a href=/Home/TemPlateKit">
-                                                    <img src="~/images/nav//@p.ImageFile" title="Logo_Home" alt="Logo_Home" loading="lazy" />
+                                                    .elementor-widget-image img {
+                                                        vertical-align: middle;
+                                                        display: inline-block
+                                                    }
+                                                </style>													
+                                                <a href="/Home/HomePage">
+                                                <img src="~/images/nav/Logo.png" title="Logo_Home" alt="Logo_Home" loading="lazy" />
                                                 </a>
                                             </div>
                                         </div>
@@ -1397,7 +1399,6 @@ theli{
         var elementskit = {
             resturl: 'https://point.moxcreative.com/yumma/wp-json/elementskit/v1/',
         }
-
 
     </script>
     <script src='~/wp-content/plugins/elementskit-lite/widgets/init/assets/js/widget-scripts5b0a.js?ver=2.9.0' id='ekit-widget-scripts-js'></script>
