--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -45,7 +45,7 @@
                                 </div>
                             </div>
                             <div>
-                                <button id="login-submit" type="submit" class="btn btn-primary btn-block">Log in</button>
+                                <button id="login-submit" type="submit" class="btn btn-primary btn-block mb-3">Log in</button>
                             </div>
                             <div>
                                 <p>
