--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -10,58 +10,61 @@
 <link href="~/css/style.css" rel="stylesheet" type="text/css" />
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 offset-md-1">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
-
-            <h2>Create a new account.</h2>
-            <hr />
+            <h2 style="text-align:center">Create a new account</h2>
+            <hr/>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <label asp-for="Input.Email"><strong>Email</strong></label>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+            <label asp-for="Input.Email" class="form-label">Email</label>
+            <div class="">
+                <input asp-for="Input.Email" class="form-control mb-3" autocomplete="username" aria-required="true" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <label asp-for="Input.Name"><strong>Name</strong></label>
-            <div class="form-floating">
-                <input asp-for="Input.Name" class="form-control" aria-required="true" />
+            <label asp-for="Input.Name">Name</label>
+            <div class="">
+                <input asp-for="Input.Name" class="form-control mb-3" aria-required="true" />
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <label asp-for="Input.Age">Age</label>
+                    <div class="">
+                        <input asp-for="Input.Age" class="form-control mb-3" aria-required="true" />
+                        <span asp-validation-for="Input.Age" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="Input.Gender">Gender</label>
+                    <div class=" ">
+                        <select asp-for="Input.Gender" class="form-select mb-3 default-select" aria-required="true">
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                            <option value="Nonbinary">Nonbinary</option>
+                        </select>
+                        <span asp-validation-for="Input.Gender" class="text-danger"></span>
+                    </div>
 
-            <label asp-for="Input.Age"><strong>Age</strong></label>
-            <div class="form-floating">
-                <input asp-for="Input.Age" class="form-control" aria-required="true" />
-                <span asp-validation-for="Input.Age" class="text-danger"></span>
+                </div>
             </div>
-
-            <label asp-for="Input.AvatarFile"><strong>Avatar</strong></label>
-            <div class="form-floating">
-                <input asp-for="Input.AvatarFile" type="file" class="form-control" accept="image/*" aria-required="true" />
+            <label asp-for="Input.AvatarFile">Avatar</label>
+            <div class=" ">
+                <input asp-for="Input.AvatarFile" type="file" class="form-control mb-3" accept="image/*" aria-required="true" />
                 <span asp-validation-for="Input.AvatarFile" class="text-danger"></span>
             </div>
-            <label asp-for="Input.Gender"><strong>Gender</strong></label>
-            <div class="form-floating">
-                <select asp-for="Input.Gender" class="form-select" aria-required="true">
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                    <option value="Nonbinary">Nonbinary</option>
-                </select>
-                <span asp-validation-for="Input.Gender" class="text-danger"></span>
-            </div>
-            <label asp-for="Input.Password"><strong>Password</strong></label>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+            <label asp-for="Input.Password">Password</label>
+            <div class=" ">
+                <input asp-for="Input.Password" class="form-control mb-3" autocomplete="new-password" aria-required="true" />
                 
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <label asp-for="Input.ConfirmPassword"><strong>Confirm Password</strong></label>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                
+            <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+            <div class="">
+                <input asp-for="Input.ConfirmPassword" class="form-control mb-3" autocomplete="new-password" aria-required="true" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <br />
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-outline-primary">Register</button>
         </form>
     </div>
     <div class="col-md-6 offset-md-1">
@@ -72,5 +75,6 @@
 </div>
 
 @section Scripts {
+  
     <partial name="_ValidationScriptsPartial" />
 }
