--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -675,7 +675,7 @@
                                 <a href="">My recipe</a>
                                 <ul aria-expanded="false">
                                     <li><a href="/Admin/RecipesByAdmin">All recipe</a></li>
-                                    <li><a href="/Admin/AddRecipe">Add new</a></li>
+                                    <li><a href="/Admin/AddOrUpdateRecipe">Add new</a></li>
                                 </ul>
 
                             </li>
@@ -758,11 +758,7 @@
     <script src="~/js/dashboard/dashboard-1.js" type="text/javascript"></script>
     <script src="~/js/custom.min.js" type="text/javascript"></script>
     <script src="~/js/deznav-init.js" type="text/javascript"></script>
-  @*  <script src="~/vendor//global/global.min.js" ></script>*@
-   @* <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
-    @*  <link href="~/vendor/select2/css/select2.min.css"rel="stylesheet" />
-    <script src="~/vendor/select2/js/select2.full.min.js"></script>*@
+
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="~/vendor/sweetalert2/dist/sweetalert2.min.js"></script>
     @await RenderSectionAsync("Script", required: false)
