--- a/Views/Admin/RecipesByAdmin.cshtml
+++ b/Views/Admin/RecipesByAdmin.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     var recipes = await recipeRepository.GetAllAsync();
+    recipes = recipes.Where(r => r.IsDeleted == false).ToList();
 }
 
 <div class="content-body ">
@@ -33,23 +34,7 @@
                         </tbody>
                     </table>
                     <div class="card-footer border-0 pt-0 text-center">
-                       @* <a href="ecom-product-list.html" class="btn-link">View More &gt;&gt;</a>*@
                         <ul class="pagination pagination-gutter pagination-primary no-bg" id="pageList">
-							@*<li class="page-item page-indicator">
-								<a class="page-link" href="javascript:void(0)">
-									<i class="la la-angle-left"></i></a>
-							</li>
-							<li class="page-item">
-								<a class="page-link" href="javascript:void(0)">1</a>
-							</li>
-							<li class="page-item active">
-								<a class="page-link" href="javascript:void(0)">2</a>
-							</li>
-							<li class="page-item page-indicator">
-								<a class="page-link" href="javascript:void(0)">
-									<i class="la la-angle-right"></i>
-								</a>
-							</li>*@
 						</ul>
                     </div>
                 </div>
